--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.github.dadiyang</groupId>
+			<artifactId>jave</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
@@ -132,7 +138,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-	<plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
